[gd_scene load_steps=45 format=2]

[ext_resource path="res://Art/rocket.png" type="Texture" id=1]
[ext_resource path="res://Actors/Ship.gd" type="Script" id=2]
[ext_resource path="res://Actors/Satellite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/explosion-sprite-sheet.png" type="Texture" id=4]
[ext_resource path="res://Actors/Debris1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sound/rocket.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.54828
height = 5.44933

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.31045
height = 5.93644

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.00662252, 0.827815 )
colors = PoolColorArray( 0.808594, 0.492737, 0, 1, 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 500, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 100, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 500, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 100, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 500, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 100, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 500, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 100, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 500, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 480, 100, 96 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 100, 480, 100, 96 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 480, 100, 96 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 480, 100, 96 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Node2D" type="KinematicBody2D"]
position = Vector2( 0, 28.9762 )
script = ExtResource( 2 )
satellite = ExtResource( 3 )
debris1 = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -21.1507 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.115913, -8.4812 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -4.07813 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.11018, -17.1771 )
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 12.7903 )
amount = 50
lifetime = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 4, 1 )
color_ramp = SubResource( 3 )

[node name="Explosion" type="AnimatedSprite" parent="."]
position = Vector2( -0.699295, -8.39156 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 38 )

[node name="BoomTimer" type="Timer" parent="."]
wait_time = 1.6

[node name="RocketPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.345
autoplay = true
[connection signal="launched" from="." to="." method="_on_Node2D_launched"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="BoomTimer" to="." method="_on_Boom_Timer_timeout"]
